--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+    <nav>
+        <div class="container">
+            <div class="logo">
+                <img src="./img/01.png" />
+                <div class="logo_text">
+                    <ul>
+                        <li>Progetti</li>
+                        <li>Su di me</li>
+                        <li>Contatti</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 </body>
 
