fix under construction

--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
     <title>Ivan Sokolov</title>
+    <meta name="keywords" content="Ivan, Sokolov, Ivan Sokolov, video, photograpy, videomaker, photographer, fotografia">
+    <meta name="og:title" content="Ivan Sokolov">
+	<meta name="description" content="Ivan Sokolov è un regista e fotografo con sede in Svizzera. Si occupa principalmente di produzioni commerciali, musicali e aziendali.">
+	<meta name="og:description" content="Ivan Sokolov è un regista e fotografo con sede in Svizzera. Si occupa principalmente di produzioni commerciali, musicali e aziendali.">
+	<meta name=”robots” content="index, follow">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style>
+        @font-face {
+            font-family: 'dinpro';
+            src: url(font/DINPro.woff2);
+        }
+        html, body {
+            height: 100%;
+            width: 100%;
+            min-width: 100%;
+            min-height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: red;
+        }
+        header {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+        header img {
+            width: 200px;
+        }
+        header .text p {
+            float: left;
+            font-family: 'dinpro';
+        }
+    </style>
 </head>
 
 <body>
+<header>
+    <img src="img/logo-ivansokolov.png" alt="Logo Ivan Sokolov" />
 
+    <div class="text">
+        <p>Sito in costruzione :)</p>
+    </div>
+</header>
 </body>
 
 </html>
