--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         @font-face {
             font-family: 'dinpro';
             src: url(font/DINPro.woff2);
+            font-weight: bold;
         }
         html, body {
             height: 100%;
@@ -24,7 +25,6 @@
             min-height: 100%;
             margin: 0;
             padding: 0;
-            background-color: red;
         }
         header {
             position: absolute;
@@ -35,9 +35,15 @@
         header img {
             width: 200px;
         }
+        header .text {
+            float: right;
+            margin-left: 20px;
+            padding-top: 17px;
+        }
         header .text p {
             float: left;
             font-family: 'dinpro';
+            font-weight: bold;
         }
     </style>
 </head>
