--- a/index.html
+++ b/index.html
@@ -11,20 +11,161 @@
 </head>
 
 <body>
-    <nav>
-        <div class="container">
-            <div class="logo">
+
+    <!-- FIRST ARTICLE-->
+    <article style="padding: 20px 20px;">
+        <div class="container_text">
+
+            <!-- NAVBAR -->
+            <nav>
                 <img src="./img/01.png" />
-                <div class="logo_text">
-                    <ul>
-                        <li>Progetti</li>
-                        <li>Su di me</li>
-                        <li>Contatti</li>
-                    </ul>
-                </div>
+                <ul class="primary_color">
+                    <li>
+                        <a href="#project">Progetti</a>
+                    </li>
+                    <li>
+                        <a href="#about">Su di me</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contatti</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="container_info">
+                <h2 class="primary_text">Fabri Fibra</h2>
+                <h2 class="primary_text">Caos Tour - 2022</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
+            </div>
+
+        </div>
+
+        <div class="container_img">
+            <img alt="fibra" src="./img/11.jpg" />
+        </div>
+    </article>
+
+    <!-- SECOND ARTICLE-->
+    <article id="project" style="margin-top: 8rem;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img">
+            <img alt="fibra" src="./img/11.jpg" />
+        </div>
+
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: 3rem;">
+                <h2 class="primary_text">Fabri Fibra</h2>
+                <h2 class="primary_text">Caos Tour - 2022</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
             </div>
         </div>
-    </nav>
+    </article>
+
+    <!-- THIRD ARTICLE-->
+    <article style="margin-top: 8rem;">
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: 3rem;">
+                <h2 class="primary_text">Drytech</h2>
+                <h2 class="primary_text">ADV</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
+            </div>
+        </div>
+
+        <img style="width: 50%" alt="adv" src="./img/drytech/Drytech+Piscina+S2_1.4.2.png" />
+    </article>
+
+    <!-- FOURTH ARTICLE-->
+    <article style="margin-top: 8rem;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img">
+            <img alt="fashion" src="./img/fashion/Snapseed+76.jpg" />
+        </div>
+
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: -3rem;">
+                <h2 class="primary_text">Fashion</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
+            </div>
+        </div>
+    </article>
+
+    <!-- FIFTH ARTICLE-->
+    <article style="margin-top: 8rem;">
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: -3rem;">
+                <h2 class="primary_text">Anagrafe</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Direzione Artistica</p>
+            </div>
+        </div>
+
+        <div style="display: flex;" class="container_img">
+            <img alt="anagrafe" src="./img/anagrafe/ANDREA.png" />
+        </div>
+    </article>
+
+    <!-- SIXTH ARTICLE-->
+    <article style="margin-top: 8rem;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img">
+            <img alt="moda" src="./img/moda/Screenshot+2022-08-10+at+14.11.11.png" />
+        </div>
+
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: -3rem;">
+                <h2 class="primary_text">Moda</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Fotogragia</p>
+            </div>
+        </div>
+    </article>
+
+    <!-- SEVENTH ARTICLE-->
+    <article style="margin-top: 8rem;">
+        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+            <div class="container_info" style="position: relative; top: -3rem;">
+                <h2 class="primary_text">Alpen Group</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia - Video</p>
+            </div>
+        </div>
+
+        <div style="display: flex;" class="container_img">
+            <img alt="alpen" src="./img/alpen-group/0O7A0365.jpg" />
+        </div>
+    </article>
+
+    <!-- ABOUT SECTION-->
+    <section id="about" style="display: flex; flex-direction: column;">
+        <div style="display: flex; align-items: center; justify-content: center;">
+            <img src="./img/sokolov.jpg" width="60%" />
+        </div>
+
+        <div style="width: 57%; display: flex; justify-content: center; align-items: center; margin: 30px 0;">
+            <div class="container_info">
+                <h2 class="primary_text">Ivan Sokolov</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Su di me</p>
+            </div>
+        </div>
+
+        <p style="align-self: center; width: 25%;">Ivan è un regista e fotografo con sede in Svizzera. Si occupa
+            principalmente di
+            produzioni commerciali, musicali e aziendali. Il suo background spazia dalla fotografia e riprese di
+            concerti, eventi e sport alla regia su set artificiali e alla fotografia in studio. Produce anche
+            cortometraggi come Limbo (2001) e To a Hard knot a Sharp Blade (2022) ed è presentatore video nel progetto
+            RSI EDU. Grazie alla sua esperienza in diverse aziende e settori, può portare a termine progetti video/foto
+            da solo o svolgere un ruolo individuale all'interno di un team più ampio.</p>
+
+        <div style="display: flex; justify-content: center;" class="photo">
+            <img src="./img/_DSC7148.jpg" alt="ivan2" width="300px" />
+            <img src="./img/_DSC4044.jpg" alt="ivan1" width="300px" />
+        </div>
+
+
+
+    </section>
 
 </body>
 
