creation fabri page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- NAVBAR -->
             <nav>
-                <img src="./img/01.png" />
+                <img src="./img/logo.png" />
                 <ul class="primary_color">
                     <li>
                         <a href="#project">Progetti</a>
@@ -42,7 +42,9 @@
         </div>
 
         <div class="container_img">
-            <img alt="fibra" src="./img/11.jpg" />
+            <a href="./pages/fibra.html">
+                <img alt="fibra" src="./img/11.jpg" />
+            </a>
         </div>
     </article>
 
@@ -73,13 +75,13 @@
             </div>
         </div>
 
-        <img style="width: 50%" alt="adv" src="./img/drytech/Drytech+Piscina+S2_1.4.2.png" />
+        <img style="width: 50%" alt="adv" src="./img//drytech/drytech3.png" />
     </article>
 
     <!-- FOURTH ARTICLE-->
     <article style="margin-top: 8rem;">
         <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="./img/fashion/Snapseed+76.jpg" />
+            <img alt="fashion" src="./img/fashion/fashion4.jpg" />
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
@@ -102,14 +104,14 @@
         </div>
 
         <div style="display: flex;" class="container_img">
-            <img alt="anagrafe" src="./img/anagrafe/ANDREA.png" />
+            <img alt="anagrafe" src="./img/anagrafe/anagrafe.png" />
         </div>
     </article>
 
     <!-- SIXTH ARTICLE-->
     <article style="margin-top: 8rem;">
         <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="moda" src="./img/moda/Screenshot+2022-08-10+at+14.11.11.png" />
+            <img alt="moda" src="./img/moda/moda1.png" />
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
@@ -132,7 +134,7 @@
         </div>
 
         <div style="display: flex;" class="container_img">
-            <img alt="alpen" src="./img/alpen-group/0O7A0365.jpg" />
+            <img alt="alpen" src="./img/alpen-group/alpen.jpg" />
         </div>
     </article>
 
@@ -159,13 +161,26 @@
             da solo o svolgere un ruolo individuale all'interno di un team più ampio.</p>
 
         <div style="display: flex; justify-content: center;" class="photo">
-            <img src="./img/_DSC7148.jpg" alt="ivan2" width="300px" />
-            <img src="./img/_DSC4044.jpg" alt="ivan1" width="300px" />
+            <img src="./img/ivan1.jpg" alt="ivan1" width="360px" />
+            <img src="./img/ivan.jpg" alt="ivan" width="360px" />
+        </div>
+    </section>
+
+    <!-- FOOTER-->
+    <footer>
+        <div class="contacts">
+            <div style="width: 58%; display: flex; align-items: center; justify-content: center;">
+                <div class="container_info">
+                    <h2 class="primary_text">Contatti</h2>
+                    <hr>
+                    <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
+                </div>
+            </div>
         </div>
 
 
+    </footer>
 
-    </section>
 
 </body>
 
