creation dry page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </div>
         </div>
 
-        <img style="width: 50%" alt="adv" src="./img//drytech/drytech3.png" />
+        <a href="./pages/drytech.html" style="width: 50%">
+            <img style="width: 100%" alt="adv" src="./img//drytech/drytech3.png" />
+        </a>
     </article>
 
     <!-- FOURTH ARTICLE-->
