--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../mobile css/mobile.css" />
     <script src="script.js" defer></script>
     <title>Ivan Sokolov</title>
 </head>
@@ -30,7 +31,8 @@
             </div>
         </div>
 
-        <p style="align-self: center; width: 25%; margin-top: 50px;">Seguo come fotografo ufficiale il "Caos Tour" di
+        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come fotografo ufficiale
+            il "Caos Tour" di
             Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri sul
             palco, nel backstage, così come di creare brevi video riassuntivi dei suoi concerti.</p>
 
@@ -38,50 +40,50 @@
     </header>
 
     <!-- SECTION ONE -->
-    <section style="display: flex;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri7.jpg" />
+    <section class="mobile_section" style="display: flex;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri7.jpg" />
         </div>
 
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
-            class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri7.jpg" />
+            class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri7.jpg" />
         </div>
     </section>
 
     <!-- SECTION TWO -->
-    <section style="display: flex;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri6.jpg" />
+    <section class="mobile_section" style="display: flex;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri6.jpg" />
         </div>
 
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
-            class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri4.jpg" />
+            class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri4.jpg" />
         </div>
     </section>
 
     <!-- SECTION THREE -->
-    <section style="display: flex;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri5.jpg" />
+    <section class="mobile_section" style="display: flex;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri5.jpg" />
         </div>
 
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
-            class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri2.jpg" />
+            class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri2.jpg" />
         </div>
     </section>
 
     <!-- SECTION FOUR -->
-    <section style="display: flex;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri1.jpg" />
+    <section class="mobile_section" style="display: flex;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri1.jpg" />
         </div>
 
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
-            class="container_img">
-            <img alt="fashion" src="../img/fabri-fibra/fabri3.jpg" />
+            class="container_img mobile_container">
+            <img alt="fibra" src="../img/fabri-fibra/fabri3.jpg" />
         </div>
     </section>
 
