creation fashion page

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
 
     <!-- FOURTH ARTICLE-->
     <article style="margin-top: 8rem;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fashion" src="./img/fashion/fashion4.jpg" />
+        <div class="container_img">
+            <a href="./pages/fashion.html" style="display: flex; justify-content: flex-end;">
+                <img alt="fashion" src="./img/fashion/fashion4.jpg" />
+            </a>
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
@@ -169,7 +171,7 @@
     </section>
 
     <!-- FOOTER-->
-    <footer>
+    <footer id="contact">
         <div class="contacts">
             <div style="width: 58%; display: flex; align-items: center; justify-content: center;">
                 <div class="container_info">
