--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -24,44 +24,39 @@
     <header style="display: flex; flex-direction: column;">
         <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
             <div class="container_info">
-                <h2 class="primary_text">Drytech</h2>
-                <h2 class="primary_text">ADV</h2>
+                <h2 class="primary_text">Fashion</h2>
                 <hr>
-                <p style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
             </div>
         </div>
 
-        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come fotografo ufficiale
-            il "Caos Tour" di
-            Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri sul
-            palco, nel backstage, così come di creare brevi video riassuntivi dei suoi concerti.</p>
-
-        <!-- SECTION -->
-        <section style="display: flex; justify-content: center; flex-direction: column; margin-top: 0;">
-            <div style="display: flex; justify-content: center; align-items: center; margin-top: 2rem;">
-                <div style="width: 25%;">
-                    <p class="primary_text">Spot 1</p>
-                </div>
-                <img src="../img/drytech/drytech3.png" width="50%" />
-            </div>
-
-            <div style="display: flex; justify-content: center; align-items: center; margin-top: 2rem;">
-                <div style="width: 25%;">
-                    <p class="primary_text">Spot 2</p>
-                </div>
-                <img src="../img/drytech/drytech1.png" width="50%" />
-            </div>
-
-            <div style="display: flex; justify-content: center; align-items: center; margin-top: 2rem;">
-                <div style="width: 25%;">
-                    <p class="primary_text">Spot 3</p>
-                </div>
-                <img src="../img/drytech/drytech.png" width="50%" />
-            </div>
-        </section>
+        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Nell'ambito di un progetto
+            della stilista Cielo Solari ho girato una pubblicità di moda per alcuni outfit.</p>
     </header>
 
+    <!-- SECTION ONE  -->
+    <section style="display: flex; justify-content: center; flex-direction: column; margin-top: 0;">
+        <div class="section_dry"
+            style="display: flex; justify-content: center; align-items: center; margin-top: 5rem; margin-left: 16%;">
+            <img src="../img/fashion/fashion.jpg" width="50%" />
+        </div>
+        <div class="section_dry"
+            style="display: flex; justify-content: center; align-items: center; margin-top: 2rem; margin-left: 16%;">
+            <img src="../img/fashion/fashion1.jpg" width="50%" />
+        </div>
+    </section>
 
+    <!-- SECTION TWO  -->
+    <section class="mobile_section" style="display: flex;">
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fibra" src="../img/fashion/fashion3.jpg" />
+        </div>
+
+        <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
+            class="container_img mobile_container">
+            <img alt="fibra" src="../img/fashion/fashion2.jpg" />
+        </div>
+    </section>
 
     <!-- FOOTER -->
     <footer
