--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./mobile css/mobile.css" />
     <script src="script.js" defer></script>
     <title>Ivan Sokolov</title>
 </head>
@@ -13,9 +14,12 @@
 <body>
 
     <!-- FIRST ARTICLE-->
+    <!-- NAVBAR MOBILE-->
+    <div class="navbar_mobile">
+        <img src="./img/logo.png" alt="logo">
+    </div>
     <article style="padding: 20px 20px;">
         <div class="container_text">
-
             <!-- NAVBAR -->
             <nav>
                 <img src="./img/logo.png" />
@@ -49,9 +53,11 @@
     </article>
 
     <!-- SECOND ARTICLE-->
-    <article id="project" style="margin-top: 8rem;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
-            <img alt="fibra" src="./img/11.jpg" />
+    <article class="article_mobile_second" id="project" style="margin-top: 8rem;">
+        <div class="container_img">
+            <a style="display: flex; justify-content: flex-end;" href="./pages/fibra.html">
+                <img alt="fibra" src="./img/11.jpg" />
+            </a>
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
@@ -65,9 +71,9 @@
     </article>
 
     <!-- THIRD ARTICLE-->
-    <article style="margin-top: 8rem;">
+    <article class="article_mobile_third" style="margin-top: 8rem;">
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: 3rem;">
+            <div class="container_info container_info_mobile" style="position: relative; top: 3rem;">
                 <h2 class="primary_text">Drytech</h2>
                 <h2 class="primary_text">ADV</h2>
                 <hr>
@@ -75,13 +81,13 @@
             </div>
         </div>
 
-        <a href="./pages/drytech.html" style="width: 50%">
+        <a class="container_mobile_image_third" href="./pages/drytech.html" style="width: 50%">
             <img style="width: 100%" alt="adv" src="./img//drytech/drytech3.png" />
         </a>
     </article>
 
     <!-- FOURTH ARTICLE-->
-    <article style="margin-top: 8rem;">
+    <article class="article_mobile_fourth" style="margin-top: 8rem;">
         <div class="container_img">
             <a href="./pages/fashion.html" style="display: flex; justify-content: flex-end;">
                 <img alt="fashion" src="./img/fashion/fashion4.jpg" />
@@ -89,7 +95,7 @@
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: -3rem;">
+            <div class="container_info container_info_mobile" style="position: relative; top: -3rem;">
                 <h2 class="primary_text">Fashion</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
@@ -98,8 +104,9 @@
     </article>
 
     <!-- FIFTH ARTICLE-->
-    <article style="margin-top: 8rem;">
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+    <article class="article_mobile_fifth" style="margin-top: 8rem;">
+        <div class="container_info_mobile"
+            style="width: 50%; display: flex; align-items: center; justify-content: center;">
             <div class="container_info" style="position: relative; top: -3rem;">
                 <h2 class="primary_text">Anagrafe</h2>
                 <hr>
@@ -113,13 +120,13 @@
     </article>
 
     <!-- SIXTH ARTICLE-->
-    <article style="margin-top: 8rem;">
+    <article class="container_mobile_sixth" style="margin-top: 8rem;">
         <div style="display: flex; justify-content: flex-end;" class="container_img">
             <img alt="moda" src="./img/moda/moda1.png" />
         </div>
 
         <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: -3rem;">
+            <div class="container_info container_info_mobile" style="position: relative; top: -3rem;">
                 <h2 class="primary_text">Moda</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Fotogragia</p>
@@ -128,8 +135,9 @@
     </article>
 
     <!-- SEVENTH ARTICLE-->
-    <article style="margin-top: 8rem;">
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
+    <article class="article_mobile_seventh" style="margin-top: 8rem;">
+        <div class="container_info_mobile"
+            style="width: 50%; display: flex; align-items: center; justify-content: center;">
             <div class="container_info" style="position: relative; top: -3rem;">
                 <h2 class="primary_text">Alpen Group</h2>
                 <hr>
@@ -144,7 +152,7 @@
 
     <!-- ABOUT SECTION-->
     <section id="about" style="display: flex; flex-direction: column;">
-        <div style="display: flex; align-items: center; justify-content: center;">
+        <div class="mobile_image_photo" style="display: flex; align-items: center; justify-content: center;">
             <img src="./img/sokolov.jpg" width="60%" />
         </div>
 
@@ -156,7 +164,8 @@
             </div>
         </div>
 
-        <p style="align-self: center; width: 25%;">Ivan è un regista e fotografo con sede in Svizzera. Si occupa
+        <p style="align-self: center; width: 25%;" class="mobile_about_text">Ivan è un regista e fotografo con sede in
+            Svizzera. Si occupa
             principalmente di
             produzioni commerciali, musicali e aziendali. Il suo background spazia dalla fotografia e riprese di
             concerti, eventi e sport alla regia su set artificiali e alla fotografia in studio. Produce anche
