style index pages

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
             </div>
         </div>
 
-        <p style="align-self: center; width: 25%;" class="mobile_about_text">Ivan è un regista e fotografo con sede in
+        <p style="align-self: center; width: 25%;" class="mobile_about_text">Ivan è un regista e
+            fotografo
+            con sede in
             Svizzera. Si occupa
             principalmente di
             produzioni commerciali, musicali e aziendali. Il suo background spazia dalla fotografia e riprese di
