--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -13,9 +13,16 @@
 
 <body>
 
+    <!-- NAVBAR MOBILE -->
+    <div class="navbar_mobile">
+        <a href="../index.html">
+            <img src="../img/logo.png" alt="logo">
+        </a>
+    </div>
+
     <!-- NAVBAR -->
     <nav style="padding: 20px 20px ;">
-        <a href="/index.html">
+        <a href="../index.html">
             <img src="../img/logo.png" alt="logo" width="210px">
         </a>
     </nav>
@@ -31,16 +38,18 @@
             </div>
         </div>
 
-        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come fotografo ufficiale
+        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come
+            fotografo ufficiale
             il "Caos Tour" di
             Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri sul
             palco, nel backstage, così come di creare brevi video riassuntivi dei suoi concerti.</p>
 
-        <img src="../img/fabri-fibra/fabri.jpg" width="350px" style="align-self: center; margin-top: 50px;" />
+        <img class="img_fibra" src="../img/fabri-fibra/fabri.jpg" width="27%"
+            style="align-self: center; margin-top: 50px;" />
     </header>
 
     <!-- SECTION ONE -->
-    <section class="mobile_section" style="display: flex;">
+    <section class="mobile_section desktop_section" style="display: flex;">
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri7.jpg" />
         </div>
@@ -52,7 +61,7 @@
     </section>
 
     <!-- SECTION TWO -->
-    <section class="mobile_section" style="display: flex;">
+    <section class="mobile_section desktop_section" style="display: flex;">
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri6.jpg" />
         </div>
@@ -64,7 +73,7 @@
     </section>
 
     <!-- SECTION THREE -->
-    <section class="mobile_section" style="display: flex;">
+    <section class="mobile_section desktop_section" style="display: flex;">
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri5.jpg" />
         </div>
@@ -76,7 +85,7 @@
     </section>
 
     <!-- SECTION FOUR -->
-    <section class="mobile_section" style="display: flex;">
+    <section class="mobile_section desktop_section" style="display: flex;">
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri1.jpg" />
         </div>
