--- a/pages/drytech.html
+++ b/pages/drytech.html
@@ -13,9 +13,16 @@
 
 <body>
 
+    <!-- NAVBAR MOBILE -->
+    <div class="navbar_mobile">
+        <a href="../index.html">
+            <img src="../img/logo.png" alt="logo">
+        </a>
+    </div>
+
     <!-- NAVBAR -->
     <nav style="padding: 20px 20px ;">
-        <a href="/index.html">
+        <a href="../index.html">
             <img src="../img/logo.png" alt="logo" width="210px">
         </a>
     </nav>
