--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -13,9 +13,16 @@
 
 <body>
 
-    <!-- NAVBAR -->
-    <nav style="padding: 20px 20px ;">
-        <a href="/index.html">
+    <!-- NAVBAR MOBILE -->
+    <div class="navbar_mobile">
+        <a href="../index.html">
+            <img src="../img/logo.png" alt="logo">
+        </a>
+    </div>
+
+    <!-- NAVBAR DESKTOP -->
+    <nav style="padding: 20px 20px;">
+        <a href="../index.html">
             <img src="../img/logo.png" alt="logo" width="210px">
         </a>
     </nav>
