--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -29,6 +29,11 @@
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
+        <div class="arrow_left">
+            <a href="../index.html">
+                <img src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
         <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
             <div class="container_info">
                 <h2 class="primary_text">Fashion</h2>
