--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAVBAR MOBILE -->
-    <div class="navbar_mobile">
+    <div id="fabri_fibra" class="navbar_mobile">
         <a href="../index.html">
             <img src="../img/logo.png" alt="logo">
         </a>
@@ -29,6 +29,11 @@
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
+        <div class="arrow_left">
+            <a href="../index.html">
+                <img src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
         <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
             <div class="container_info">
                 <h2 class="primary_text">Fabri Fibra</h2>
@@ -117,6 +122,12 @@
                 <hr>
             </div>
         </div>
+
     </footer>
+    <div class="arrow_up">
+        <a href="#fabri_fibra">
+            <img src="../img/arrow-up.png" />
+        </a>
+    </div>
 
 </body>
