--- a/index.html
+++ b/index.html
@@ -183,17 +183,13 @@
 
     <!-- FOOTER-->
     <footer id="contact">
-        <div class="contacts">
-            <div style="width: 58%; display: flex; align-items: center; justify-content: center;">
-                <div class="container_info">
-                    <h2 class="primary_text">Contatti</h2>
-                    <hr>
-                    <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
-                </div>
+        <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
+            <div class="container_info">
+                <h2 class="primary_text">Contatti</h2>
+                <hr>
+                <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
             </div>
         </div>
-
-
     </footer>
 
 
